2007-11-08  Tobias Burnus  <burnus@net-b.de>

PR fortran/33917
        * interface.c (check_sym_interfaces): Disallow PROCEDURE-declared
        procedures for MODULE PROCEDURE.
        * decl.c (match_procedure_in_interface): Do not mark as procedure.

2007-11-08  Tobias Burnus  <burnus@net-b.de>

        PR fortran/33917
        * gfortran.dg/proc_decl_5.f90: New.
        * gfortran.dg/proc_decl_6.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130002 138bc75d-0d04-0410-961f-82ee72b054a4